# vite-react-rust-wasm-project

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
src/: App.css  App.tsx  IrBitStream.tsx  IrControlCode.tsx  IrDecodedFrame.tsx  IrDecordedFrame.tsx  IrDemodulatedFrame.tsx  IrSignal.tsx  error-page.tsx  index.css  main.tsx  types.ts  webserialapi.ts
src/components/: Home.tsx  InfraredRemoteAnalyzer.tsx  IrControlCode.tsx  IrDecordedFrame.tsx  IrSignal.tsx  NotFound.tsx  Root.tsx  SerialConnectionEffect.tsx  Settings.tsx  root.css
wasm/: Cargo.toml
wasm/src/: devices.rs  infrared_remote.rs  lib.rs  parsing.rs
wasm/src/devices/: daikin_hvac.rs  hitachi_hvac.rs  mitsubishi_electric_hvac.rs  panasonic_hvac.rs  sirc.rs
wasm/src/infrared_remote/: bit.rs  decord_ir_frames.rs  decord_receiving_data.rs  devices.rs  protocol_aeha.rs  protocol_nec.rs  protocol_sirc.rs
wasm/src/infrared_remote/devices/: daikin_hvac.rs  hitachi_hvac.rs  mitsubishi_electric_hvac.rs  panasonic_hvac.rs  sirc.rs  toshiba_tv.rs
